--- a/latex/cv_7.tex
+++ b/latex/cv_7.tex
@@ -44,7 +44,7 @@
 \familyname{Hjerrild} % Your last name
 
 % All information in this block is optional, comment out any lines you don't need
-\title{Curriculum Vitae}
+\title{CV}
 \address{Jens Baggesensvej 118, 8200}{Aarhus N, Danmark}
 \mobile{(+45) 42 42 08 83}
 \phone{(None) }
@@ -52,7 +52,7 @@
 \email{larshjerrild@hotmail.com}
 %\homepage{staff.org.edu/~jsmith}{staff.org.edu/$\sim$jsmith} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 %\extrainfo{additional information}
-\photo[70pt][0.4pt]{pictures/picture} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
+\photo[90pt][0.4pt]{pictures/picture} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 %\quote{"T" - John Smith}
 
 %----------------------------------------------------------------------------------------
@@ -80,7 +80,26 @@
 %\makeletterclosing % Print letter signature
 %
 
-\textbf{Ans\o gning  vedr. praktikstilling i Systematic}
+\textbf{Ans\o gning  vedr. stillingen "Praktik: Softwareudvikler" ved Systematic}
+\vspace{2mm} 
+\\
+ Stillingsopslaget lyder sp\ae ndende af flere \aa rsager, men appellere prim\ae rt til mig pga. systematics store fokus p{\aa} process, der g\o r at de kan tilbyde noget der ikke findes andetsteds. St\o rrelsen af virksomhedens produkter kr\ae ver ogs{\aa} at software arktitekturen skal v\ae re gennemt\ae nkt og det synes jeg er sp\ae ndende. \\
+
+Jeg mener jeg er den rigtige til stillingen, fordi jeg er velovervejet og g\aa r op i at det software jeg udvikler skal v\ae re b\aa de vedligholdelses venligt og nemt at udvikle p\aa. Derigennem tror jeg p{\aa} at man f\aa r de bedste produkter. 
+Desuden t\ae nker jeg meget over hvordan jeg arbejder og pr\o ver struktureret at komme til at arbejde bedre og mere effektivt. Jeg har tidligere selv deltaget i et scrum kursus udbudt af Systematic, og har derigennem f\aa et indtroduceret jeres arbejdsmetoder, og jeg vil gerne arbejde et sted hvor jeg kan v\ae re med til at effektificere udviklingsprocessen, som en del af udviklingsteamet.\\
+
+
+
+Jeg kunne godt t\ae nke mig at arbejde med backend-udviklingen som b\aa de indeholder uafh\ae ngige applikationer, men ogs\aa selve informationsstyringen synes jeg lyder sp\ae ndende. Jeg kan godt noget front-end udvikling, men synes ikke det er lige s{\aa} sp\ae ndende.
+
+Generelt synes jeg at afdelingerne Health og Defence lyder mest attraktive for mig, simpelthen da jeg synes at dom\ae net er sjovt.\\
+
+Personligt er jeg en nem person der godt kan lide at lave mange forskellige ting. Fx spiller jeg musik, har l\o bet en del igennem tiden, og er med i en hockey forening hvor jeg spiller en gang om ugen. Se mere under CV.\\ 
+
+
+
+
+
 
 
 
@@ -92,8 +111,8 @@ Lars Hjerrild
 
 
 
-\vspace{8mm}
-Bilag : CV og Karakterudskrift 
+\vspace{10mm}
+%Bilag : CV og Karakterudskrift 
 
 
 
@@ -114,15 +133,15 @@ Bilag : CV og Karakterudskrift
 %----------------------------------------------------------------------------------------
 
 \section{Om mig}
-Personligt bruger jeg tid p\aa at tr\ae ne, fordi jeg elsker at komme ud at bev\ae ge mig. Fx Som det er nu spiller jeg fast hockey et par timer om ugen. Jeg har som teenager (15-20) gået rigtig meget op i sporten orienteringsløb, hvor jeg i fire år var en del af det danske juniorlandshold. Jeg har derigennem lært meget om at arbejde struktureret til at blive bedre, og hvor stor en betydning det milj\o man arbejder i har. Jeg er som person en smule stille og meget analytisk, men alligevel g\aa r jeg meget op i at folk har det godt, og den derv\ae rende juniorlandstr\ae ner sagde ogs\aa til mig da jeg stoppede at han aldrig har haft en l\oe ber der havde givet ham s\aa mange high fives. Jeg kan godt lide at fejre succeser og har derudover interesse i musik og er i \oe vrigt ret god til engelsk da jeg har boet i USA i et \aa r, og g\aa et p\aa en amerikansk elementary school. Jeg har s\aa gar et amerikansk mesterskab i M12 i orienteringsl\o b 
+Personligt kan jeg godt lide at v\ae re aktiv og bruger tid p{\aa} at tr\ae ne og elsker at komme udenfor. Jeg spiller fast hockey et par timer om ugen, og har som teenager (15-20) g\aa et rigtig meget op i orienteringsl\o b, hvor jeg i fire \aa r var en del af det danske juniorlandshold. Jeg har derigennem l\ae rt  at arbejde struktureret p{\aa} at blive bedre, og hvor stor en betydning det milj\o man arbejder i har. Som person er jeg en smule stille, men jeg g\aa r meget op i at folk har det godt. Min gamle juniorlandstr\ae ner sagde til mig da jeg stoppede at han aldrig har haft en l\oe ber der havde givet ham s\aa mange high fives, hvilket jeg synes var meget sigende om mig. Jeg har interesse i musik og elsker at rejse. Jeg har s\aa gar boet i USA i et \aa r, og g\aa et p{\aa} en amerikansk elementary school s\aa selvom det ikke bliver brugt s\aa ofte l\ae ngere er mit engelsk stadig ganske godt. 
 
 \section{Uddannelse}
 
 \cventry{2015--2018}{DiplomIngeni\o r i information og kommunikationsteknologi}{Aarhus Universitet}{IHA}
 {}{}  % Arguments not required can be left empty
-\cventry{2010--2014}{Stx}{Marselisborg Gymnasium}{}
+\cventry{2010--2014}{STX}{Marselisborg Gymnasium}{}
 {}{}
-\cventry{2009--2010}{Efterskole}{himmelbjergegnens natur og idr\a tsefterskole}{}
+\cventry{2009--2010}{Efterskole}{himmelbjergegnens natur og idr\ae tsefterskole}{}
 {}{}
 
 %\section{Masters Thesis}
@@ -137,7 +156,7 @@ Personligt bruger jeg tid p\aa at tr\ae ne, fordi jeg elsker at komme ud at bev\
 
 \section{Erfaring}
 
-Arbejdede i en kort periode som vikar, hvor jeg hjalp som lagerarbejder. Det hjalp til at sparre lidt sm\aa knaster op til at komme ud og rejse. 
+Arbejdede i en ganske kort periode som vikar, hvor jeg hjalp som lagerarbejder. Det hjalp til at sparre op til at komme ud og rejse. 
 %
 %\subsection{Vocational}
 %
@@ -165,9 +184,9 @@ Arbejdede i en kort periode som vikar, hvor jeg hjalp som lagerarbejder. Det hja
 
 %------------------------------------------------
 %
-\subsection{Diverse}
 
-Jeg har efterh\aa nden mange gange arrangeret l\o b og tr\ae ning hvor jeg uden fastans\ae ttelse har tjent penge både til mig selv eller til min egen klub(Orienteringsl\o b).
+
+Jeg har efterh\aa nden mange gange arrangeret l\o b og tr\ae ning hvor jeg uden fastans\ae ttelse har tjent penge b\aa de til mig selv eller til min egen klub(Orienteringsl\o b).
 
 %
 %\cventry{2008--2009}{Computer Repair Specialist}{Buy More}{Burbank}{}{Worked in the Nerd Herd and helped to solve computer problems by asking customers to turn their computers off and on again.}
@@ -187,9 +206,9 @@ Jeg har efterh\aa nden mange gange arrangeret l\o b og tr\ae ning hvor jeg uden 
 
 \section{Faglig kompetancer}
 
-\cvitem{}{\textsc{C}    \textsc{C++}  \textsc{C\#}}
-\cvitem{}{\textsc{Bootstrap} \textsc{CSS} \textsc{Git}  \textsc{HTML5} \textsc{Linux} }
-
+\cvitem{}{\textsc{C}    \textsc{C++}  \textsc{C\#} \textsc{WPF} \textsc{Entity-Framework}}
+\cvitem{}{\textsc{Bootstrap} \textsc{CSS3}   \textsc{HTML5} \textsc{ASP.Net}  }
+\cvitem{}{\textsc{Scrum} \textsc{Projektarbejde} \textsc{Git} \textsc{Linux} \textsc{NUnit}}
 
 %----------------------------------------------------------------------------------------
 %	COMMUNICATION SKILLS SECTION
